--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://github.com/jayantbana" target="_blank" aria-label="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+                    <a href="https://linkedin.com/in/" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="mailto:jayantchaudhary2005@gmail.com" aria-label="Email">
@@ -388,7 +388,7 @@
                     </div>
                     <div class="contact-social">
                         <a href="https://github.com/jayantbana" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://linkedin.com/in/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://twitter.com/JayantBana" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
@@ -408,3 +408,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
